Update from https://github.com/alexanderameye/linework-docs/commit/f73068286a2b4fde74dda9a3dbaf1f2a921d5584

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -660,6 +660,13 @@ p img[width][height] {
     /* Preserve aspect ratio */
 }
 
+/* COMMENTS */
+.comments {
+    grid-area: comments;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+}
+
 /* BLOCKQUOTES */
 
 blockquote {
