--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -26,7 +26,7 @@ body {
     display: grid;
     grid-template-areas: "left content right";
     padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-bottom: 0rem;
     left:0;
     width: 100%;
     margin: 0;
@@ -41,7 +41,24 @@ body {
 }
 
 .nav-bar-content {
+    display: grid;
+    grid-template-rows: auto auto; /* Two rows: title + search, reviews */
     grid-area: content;
+    width: 100%;
+    align-items: center;
+}
+
+
+/* .nav-bar-content {
+    grid-area: content;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+} */
+
+
+.nav-bar-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -292,7 +309,7 @@ pre code {
     grid-template-areas: "explorer docs";
     display: grid;
     grid-area: docs;
-    margin-top: 6rem;
+    margin-top: 9rem;
   
     
 }
@@ -334,7 +351,7 @@ body {
     overflow-y: auto; /* Enable vertical scrolling for the explorer if needed */
     overflow-x: hidden; /* Prevent horizontal overflow */
     position: fixed; /* Keep explorer fixed */
-    top: 6rem; /* Stick to the top of the viewport, below navbar */
+    top: 9rem; /* Stick to the top of the viewport, below navbar */
     width: 10rem; /* Fixed width for the sidebar */
     max-height: calc(100vh - 10rem); /* Prevent overflow beyond the screen height */
 }
@@ -345,6 +362,89 @@ body {
     grid-area: docs;
     padding-left: 1rem;
     background-color: white;
+}
+
+/* REVIEWS */
+/* General Flex Layout for Navbar and Reviews */
+
+/* Reviews Styling */
+.reviews-container {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    padding:  0;
+    width: 100%;
+    height: 3rem;
+    margin: 0;
+    position: relative;
+}
+
+.reviews-container::before,
+.reviews-container::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 5%;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)); /* Fading effect from left */
+    z-index: 1;
+}
+
+.reviews-container::after {
+    right: 0;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)); /* Fading effect from right */
+}
+
+
+.reviews-wrapper {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+.reviews {
+    display: flex;
+    animation: scroll-reviews 30s linear infinite;
+    white-space: nowrap;
+}
+
+.review {
+    min-width: min-content;
+    margin-right: 1rem;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: start;
+    text-align: center;
+    white-space: nowrap; /* Prevent text wrapping */
+    overflow: hidden; /* Hide overflow */
+    text-overflow: ellipsis; /* Show ellipsis for overflowed text */
+}
+
+.review p {
+    font-family: monospace;
+    font-style: italic;
+    font-size: 0.8rem;
+}
+
+.review span {
+    font-size: 0.8rem;
+    font-family: monospace;
+}
+
+.stars {
+    color: black;
+    font-size: 0.6rem;
+    margin-top: 0rem;
+}
+
+/* Animation for Infinite Scroll */
+@keyframes scroll-reviews {
+    0% {
+        transform: translateX(0); /* Start from the left */
+    }
+    100% {
+        transform: translateX(-200%); /* Move to the left off-screen */
+    }
 }
 
 
