Update from https://github.com/alexanderameye/linework-docs/commit/1b27d9dfea8f601e97ea5c4ba9d3b7439b45b758

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -667,6 +667,8 @@ summary {
     cursor: pointer;
     position: relative;
     padding-left: calc(1.75rem + .75rem + .75rem);
+    font-family: monospace;
+    font-weight: bold;
 }
 
 summary:before {
@@ -687,6 +689,8 @@ summary:before {
 
 details[open] summary {
     background-color: #e7e7e7;
+    font-family: monospace;
+    font-weight: bold;
 }
 
 details[open] summary:before {
